// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scorecard charts snapshots Scorecard snapshot 1`] = `
<div
  class="o-figure w-100 h-100"
  data-id="someuuid"
  style=""
  tabindex="0"
>
  <div
    class="o-chart-container w-100 h-100"
  >
    <canvas
      class="o-figure-canvas w-100 h-100"
      height="335"
      width="536"
    />
  </div>
  
  <div
    class="o-figure-menu position-absolute m-2"
  >
    <div
      class="o-figure-menu-item"
    >
      <svg
        class="o-icon"
        viewBox="0 0 384 384"
      >
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="277.333"
        />
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="170.667"
        />
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="64"
        />
      </svg>
    </div>
    
    
  </div>
  
</div>
`;

exports[`Scorecard charts snapshots scorecard text is resized while figure is resized 1`] = `
<div
  class="o-figure w-100 h-100"
  data-id="someuuid"
  style="opacity:0.9; cursor:grabbing;"
  tabindex="0"
>
  <div
    class="o-chart-container w-100 h-100"
  >
    <canvas
      class="o-figure-canvas w-100 h-100"
      height="135"
      width="236"
    />
  </div>
  
  <div
    class="o-figure-menu position-absolute m-2"
  >
    <div
      class="o-figure-menu-item"
    >
      <svg
        class="o-icon"
        viewBox="0 0 384 384"
      >
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="277.333"
        />
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="170.667"
        />
        <rect
          fill="currentColor"
          height="42.667"
          width="384"
          x="0"
          y="64"
        />
      </svg>
    </div>
    
    
  </div>
  
</div>
`;
